--- a/MPV.conf
+++ b/MPV.conf
@@ -12,7 +12,7 @@ ao=wasapi # "Higher quality" audio on Windows.
 cache-on-disk=no # Hopefully uses memory cache.
 cache-secs=33 # Subjective but can be set absurdly high to cache as much as possible.
 correct-downscaling=yes # Supposed to increase radius of filters when downscaling and increase "quality".
-d3d11va-zero-copy=yes # Supposedly optimizes hardware decoding but may be unstable.
+d3d11va-zero-copy=yes # Apparently optimizes hardware decoding but may be unstable.
 demuxer-max-back-bytes=3GiB # Subjective but can be set to memory capacity to cache as much as possible.
 demuxer-max-bytes=3GiB #Subjective but can be set to memory capacity to cache as much as possible.
 dither-size-fruit=8 # Highest setting for dither fruit for "quality".
@@ -22,12 +22,12 @@ gpu-api=vulkan # Vulkan is supposed to be newer and more performant than DirectX
 gpu-context=winvk # Used for Vulkan on Windows.
 hdr-compute-peak=yes # Supposed to improve HDR tone mapping "quality".
 hdr-contrast-recovery=0.30 # Used in "gou-hq" / "high-quality" profile of MPV.
-hdr-contrast-smoothness=1.0 # Supposedly increases HDR perceived sharpness.
-hdr-peak-decay-rate=0.0 # Supposedly more accurate HDR peak detection but may have flickering.
+hdr-contrast-smoothness=1.0 # Might increase HDR perceived sharpness.
+hdr-peak-decay-rate=0.0 # Apparently more accurate HDR peak detection but may have flickering.
 hdr-peak-percentile=99.995 # Used in "gpu-hq" / "high-quality" profile of MPV.
 hwdec=no # Software decoding is recommended for consistent "quality".
 interpolation=yes # Attempts to mitigate judder of lower fps content on a higher refresh rate display. Uses tscale filter to do this.
-linear-downscaling=yes # Increases perceived sharpness of downscaling and supposedly more accurate.
+linear-downscaling=yes # Increases perceived sharpness of downscaling and apparently more accurate.
 linear-upscaling=no # Increases perceived sharpness of upscaling but also has more haloing when enabled.
 load-scripts=no # Disables loading all scripts on startup.
 loop-file=inf # Play video repeatedly.
@@ -37,16 +37,16 @@ screenshot-jxl-distance=0.0 # Lossless JPEG-XL.
 screenshot-jxl-effort=9 # Highest compression JPEG-XL.
 screenshot-webp-compression=6 # Highest compression WEBP.
 screenshot-webp-lossless=yes # Lossless WEBP.
-sigmoid-upscaling=yes # Supposedly reduces haloing and increases perceived sharpness. May have color fringing.
+sigmoid-upscaling=yes # Seems to reduce haloing and increase perceived sharpness. May amplify color fringing or imperfections.
 swapchain-depth=1 # Displays frames as soon as possible. Low latency playback.
 target-colorspace-hint=yes # Detects capabilities of displays. May not always be accurate.
 tone-mapping=spline # Subjective. What method to use to map HDR content to your display or SDR content when using inverse tone mapping.
-tscale-blur=0.5 # Should really only be this low with sphinx. Causes strange issues with other filters when this low. Less motion blur.
-tscale-clamp=0.0 # Supposedly increases sharpness of content in motion.
-tscale=sphinx # Supposedly "high quality" filter for interpolation and tscale.
+tscale-blur=0.5 # Should really only be this low with sphinx. Causes strange issues with other filters when set this low. Less motion blur.
+tscale-clamp=0.0 # Seemingly increases sharpness of content in motion.
+tscale=sphinx # Apparently a "high quality" filter for interpolation and tscale.
 #vd-lavc-threads= # Insert the thread count of your CPU here.
 video-sync=display-resample # Required for interpolation.
-vo=gpu-next # Supposedly newer and more advanced than gpu. Required for many settings here.
+vo=gpu-next # Newer and presumably more advanced than "GPU". Required for many settings here.
 vulkan-async-compute=yes
 vulkan-async-transfer=yes
 vulkan-swap-mode=fifo # Supposed to enable vsync on Vulkan.
@@ -54,15 +54,15 @@ ytdl-format=bestvideo+bestaudio[format_id!$=-drc]/best # Supposed to download th
 #ytdl-raw-options-append=config= PATH TO CONFIG HERE Pass ytdlp config.
 #ytdl-raw-options=config= PATH TO CONFIG HERE Pass ytdlp config.
 ytdl=yes
-sigmoid-slope=11.5 # Reduces haloing and increases perceived sharpness when using sigmoid-upscaling. May have color fringing. 
-sigmoid-center=0.5 # Supposed to 0.5 but defaults to 0.75
+sigmoid-slope=11.5 # Reduces haloing and increases perceived sharpness when using sigmoid-upscaling. May amplify color fringing or imperfections. 
+sigmoid-center=0.5 # Supposed to 0.5 but defaults to 0.75.
 scale=catmull_rom # Really just a fallback or if polar / ewa filters are too demanding.
 cscale=bilinear # Bilinear is "smooth" but don't have to worry about artifacts in chroma.
 dscale=catmull_rom # Really just a fallback or if polar / ewa filters are too demanding.
-#glsl-shaders="~~/shaders/adaptive-sharpen.glsl" #Adaptive sharpen is supposedly "higher quality" but can be demanding especially for iGPUs. However, this shader has to be installed.
+#glsl-shaders="~~/shaders/adaptive-sharpen.glsl" # Adaptive sharpen is presumably "higher quality" but can be demanding especially for iGPUs. However, this shader has to be installed.
 #glsl-shaders="~~/shaders/unsharp_masking.glsl" # Adaptive sharpen may be too demanding on an iGPU so this shader is close and applies after scaling. However, this shader has to be installed.
 
-# Sinc is supposedly the "ideal" 1 dimensional or seperable scaling / resampling filter. Jinc is supposedly the 2 dimensional or isometric version of sinc and supposedly the "ideal" 2 dimensional scaling / resampling filter. 
+# Sinc is supposedly the "ideal" 1 dimensional or seperable scaling / resampling filter. Jinc is apparently the 2 dimensional or isometric version of sinc and supposedly the "ideal" 2 dimensional scaling / resampling filter. 
 # These both have haloing and ringing due to truncation of the filters because of the impracticality of using an infinite radius which these filters need to be "ideal". 
 # Radius / lobes determines how many pixels to average with the filter and affects the perceived sharpness, aliasing, smoothing, blockiness, of these filters. 
 # Lower settings seem to have less haloing, more perceived sharpness, but amplify imperfections and blockiness instead of smoothing. 
@@ -84,13 +84,13 @@ libplacebo-opts=upscaler=custom,downscaler=custom,upscaler_preset=ewa_jinc,downs
 # If using an iGPU on a second monitor or even just a second monitor you can use a profile structured like this.
 #[iGPU]
 #profile-cond=display_height == INSERTDISPLAYVERTICALRESOLUTION and p["current-tracks/video/albumart"] == false # Replace occurences of "INSERTVERTICALDISPLAYRESOLUTION" with your display's vertical resolution. For example "4K" and 3840x2160 would be 2160.
-#audio-exclusive=no # Exclusive audio supposedly bypasses any processing. However, it will mute out any other audio sources while a video is playing on MPV.
+#audio-exclusive=no # Exclusive audio apparently bypasses any processing. However, it will mute out any other audio sources while a video is playing on MPV.
 #d3d11-adapter=
 #dither-depth= # Bit depth of your display here.
 #gpu-api=d3d11
 #gpu-context=d3d11
 #hwdec=d3d11va # If you want the iGPU to decode instead of the CPU.
-#inverse-tone-mapping= # Expands SDR content to the HDR capabilities of your display.
+#inverse-tone-mapping= # Expands SDR content to the HDR capabilities of your display if enabled. Also increases peak brightness of HDR content.
 #priority=belownormal # Lowers priority for better performance when multitasking but may cause stuttering or worse playback.
 #swapchain-depth=8 # How many frames to queue which may reduce dropped frames occurence but might increase delay between visuals and audio.
 #vulkan-device=
@@ -99,7 +99,7 @@ libplacebo-opts=upscaler=custom,downscaler=custom,upscaler_preset=ewa_jinc,downs
 [dGPU]
 #profile-cond=display_height == INSERTDISPLAYVERTICALRESOLUTION and p["current-tracks/video/albumart"] == false
 #dither-depth= # Bit depth of your display here.
-inverse-tone-mapping=yes # Expands SDR content to the HDR capabilities of your display if enabled.
+inverse-tone-mapping=yes # Expands SDR content to the HDR capabilities of your display if enabled. Also increases peak brightness of HDR content.
 #target-contrast=  # Use inf (infinite) for OLED displays otherwise use the contrast appropriate for your display or use the default 1000 if unsure.
 
 # It is possible to structure a profile like this to use another GPU when using a secondary display with an iGPU and use "higher quality" effects if the iGPU is unable to handle it.
